[gd_scene load_steps=26 format=3 uid="uid://d25kpw1qij0p3"]

[ext_resource type="Texture2D" uid="uid://c04521i6ttlft" path="res://prototyping_assets/background/background_glacial_mountains.png" id="1_1k58m"]
[ext_resource type="Script" path="res://GameController2.gd" id="1_isloq"]
[ext_resource type="TileSet" uid="uid://mliyyuu4vpdo" path="res://prototyping_assets/prototyping_tile_set.tres" id="1_xprpg"]
[ext_resource type="Script" path="res://Player.gd" id="3_7nnq2"]
[ext_resource type="Texture2D" uid="uid://gf8hkgjjtg1a" path="res://prototyping_assets/Characters/character_0000.png" id="4_h5m3f"]
[ext_resource type="Texture2D" uid="uid://c8eq5atbpqvjl" path="res://prototyping_assets/Characters/character_0001.png" id="5_wgt35"]
[ext_resource type="AudioStream" uid="uid://dx7xjaea4a" path="res://prototyping_assets/sound_effects/footstep_grass_000.ogg" id="6_pqt8o"]
[ext_resource type="PackedScene" uid="uid://b338jna4maqn5" path="res://nice_npc.tscn" id="7_0bb30"]
[ext_resource type="AudioStream" uid="uid://dm51gq8b4jcdm" path="res://prototyping_assets/sound_effects/sound1.mp3" id="8_et3ac"]
[ext_resource type="PackedScene" uid="uid://bnl1lp56tvvio" path="res://chest.tscn" id="8_frwj4"]
[ext_resource type="PackedScene" uid="uid://wokgixou3e57" path="res://diamond.tscn" id="9_lch6e"]
[ext_resource type="PackedScene" uid="uid://cvij7am6ju12e" path="res://key.tscn" id="10_pn16j"]
[ext_resource type="AudioStream" uid="uid://bki1e4ksfiuj2" path="res://prototyping_assets/background/Magic Fx 6.ogg" id="11_174wk"]
[ext_resource type="PackedScene" uid="uid://c8lvff6ek4eos" path="res://ladder.tscn" id="14_es47r"]
[ext_resource type="PackedScene" uid="uid://bgqj4xnl1n3ry" path="res://door.tscn" id="15_5wteh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s57uq"]
size = Vector2(542, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_758jn"]
size = Vector2(206, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8rsf"]
size = Vector2(88, 675)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxt6c"]
size = Vector2(1285, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rka5"]
size = Vector2(54, 622)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c8ksd"]
a = Vector2(-130, 351)
b = Vector2(128, 351)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2dsn4"]
a = Vector2(-398, 365)
b = Vector2(-197, 365)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5kr0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h5m3f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h5m3f")
}, {
"duration": 1.0,
"texture": ExtResource("5_wgt35")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b1rbs"]

[sub_resource type="LabelSettings" id="LabelSettings_ee0jc"]
font_size = 6
font_color = Color(0, 0, 0, 1)

[node name="GameController" type="Node2D"]
position = Vector2(111, 135)
script = ExtResource("1_isloq")

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(-3.00002, 194.5)
scale = Vector2(3.59896, 3.55093)
texture = ExtResource("1_1k58m")

[node name="TileMap" type="TileMap" parent="."]
physics_interpolation_mode = 1
tile_set = ExtResource("1_xprpg")
format = 2
layer_0/tile_data = PackedInt32Array(524284, 131072, 5, 524286, 131072, 5, 524285, 131072, 5, 524287, 131072, 5, 458752, 131072, 5, 458753, 131072, 5, 458754, 131072, 5, 458755, 131072, 5, 458756, 131072, 5, 458757, 131072, 5, 458758, 131072, 5, 458759, 131072, 5, 458761, 131072, 5, 458760, 131072, 5, 458762, 131072, 5, 524294, 131072, 6, 524295, 131072, 6, 524296, 131072, 6, 524297, 131072, 6, 524298, 131072, 6, 524293, 131072, 6, 524292, 131072, 6, 524291, 131072, 6, 524290, 131072, 6, 524289, 131072, 6, 524288, 131072, 6, 589823, 131072, 6, 589822, 131072, 6, 589821, 131072, 6, 589820, 65536, 6, 1245198, 917504, 0, 1245199, 917504, 0, 1245200, 917504, 0, 1245203, 917504, 0, 1245204, 917504, 0, 1245205, 917504, 0, 1245208, 917504, 0, 1245209, 917504, 0, 1245210, 917504, 0, 917522, 917504, 0, 917521, 917504, 0, 917526, 917504, 0, 917527, 917504, 0, 720916, 917504, 0, 196610, 917504, 0, 196611, 917504, 0, 131074, 917504, 0, 196612, 917504, 0, 196613, 917504, 0, 131077, 917504, 0, 65538, 917504, 0, 65541, 917504, 0, 851945, 131072, 4, 851946, 131072, 4, 851947, 131072, 4, 851948, 131072, 4, 851949, 131072, 4, 851950, 131072, 4, 458735, 131072, 4, 458736, 131072, 4, 458737, 131072, 4, 458738, 131072, 4, 1310708, 131072, 4, 1310709, 131072, 4, 1310711, 131072, 4, 1310710, 131072, 4, 917531, 917504, 0, 917517, 917504, 0, 1376244, 131072, 6, 1376245, 131072, 6, 1376246, 131072, 6, 1376247, 131072, 6, 1441783, 131072, 6, 1507319, 131072, 6, 1572855, 131072, 6, 1638391, 131072, 6, 1703927, 131072, 6, 1703926, 131072, 6, 1703925, 131072, 6, 1638389, 131072, 6, 1572853, 131072, 6, 1507317, 131072, 6, 1507318, 131072, 6, 1441782, 131072, 6, 1572854, 131072, 6, 1638390, 131072, 6, 1441781, 131072, 6, 1441780, 131072, 6, 1507316, 131072, 6, 1572852, 131072, 6, 1638388, 131072, 6, 1703924, 131072, 6, 1769460, 131072, 6, 1834996, 131072, 6, 1769461, 131072, 6, 1769462, 131072, 6, 1769463, 131072, 6, 1834997, 131072, 6, 1900533, 131072, 6, 1966069, 131072, 6, 2031605, 131072, 6, 2097141, 131072, 6, 2162677, 131072, 6, 2228213, 131072, 6, 2293749, 131072, 6, 2359285, 131072, 6, 1900534, 131072, 6, 1834998, 131072, 6, 1966070, 131072, 6, 2031606, 131072, 6, 2097142, 131072, 6, 2162678, 131072, 6, 2228214, 131072, 6, 2293750, 131072, 6, 2359286, 131072, 6, 2359287, 131072, 6, 2293751, 131072, 6, 2228215, 131072, 6, 2162679, 131072, 6, 2097143, 131072, 6, 2031607, 131072, 6, 1966071, 131072, 6, 1900535, 131072, 6, 1834999, 131072, 6, 1900532, 131072, 6, 1966068, 131072, 6, 2031604, 131072, 6, 2097140, 131072, 6, 2162676, 131072, 6, 2228212, 131072, 6, 2293748, 131072, 6, 2359284, 131072, 6, 1572881, 917504, 0, 1572887, 917504, 0, 1835028, 917504, 0, 1572886, 917504, 0, 1572882, 917504, 0, 786457, 917504, 0, 786447, 917504, 0, 1048596, 917504, 0, 1048591, 917504, 0, 1048601, 917504, 0, 1376264, 65536, 4, 1376258, 65536, 4, 1376252, 65536, 4, 1441788, 65536, 6, 1507324, 65536, 6, 1572860, 65536, 6, 1638396, 65536, 6, 1703932, 65536, 6, 1769468, 65536, 6, 1835004, 65536, 6, 1900540, 65536, 6, 1966076, 65536, 6, 2031612, 65536, 6, 2097148, 65536, 6, 2162684, 65536, 6, 2228220, 65536, 6, 1441794, 65536, 6, 1507330, 65536, 6, 1572866, 65536, 6, 1638402, 65536, 6, 1703938, 65536, 6, 1769474, 65536, 6, 1835010, 65536, 6, 1900546, 65536, 6, 1966082, 65536, 6, 2031618, 65536, 6, 2097154, 65536, 6, 2162690, 65536, 6, 2228226, 65536, 6, 2293762, 65536, 6, 1441800, 65536, 6, 1507336, 65536, 6, 1572872, 65536, 6, 1638408, 65536, 6, 1703944, 65536, 6, 1769480, 65536, 6, 1835016, 65536, 6, 1900552, 65536, 6, 1966088, 65536, 6, 2031624, 65536, 6, 2097160, 65536, 6, 2162696, 65536, 6, 2228232, 65536, 6, 2293768, 65536, 6, 2293756, 65536, 6, 2359292, 65536, 6, 1507331, 851968, 3, 1507332, 851968, 3, 1507333, 851968, 3, 1507334, 851968, 3, 1572870, 851968, 3, 1572871, 851968, 3, 1507335, 851968, 3, 1638407, 851968, 3, 1703943, 851968, 3, 1703942, 851968, 3, 1703941, 851968, 3, 1638405, 851968, 3, 1572869, 851968, 3, 1638406, 851968, 3, 1572868, 851968, 3, 1572867, 851968, 3, 1638403, 851968, 3, 1703939, 851968, 3, 1769475, 851968, 3, 1835011, 851968, 3, 1900547, 851968, 3, 1966083, 851968, 3, 2031619, 851968, 3, 2097155, 851968, 3, 2162691, 851968, 3, 2228227, 851968, 3, 2293763, 851968, 3, 2293764, 851968, 3, 2293765, 851968, 3, 2293766, 851968, 3, 2228230, 851968, 3, 2228231, 851968, 3, 2293767, 851968, 3, 2162695, 851968, 3, 2097159, 851968, 3, 2031623, 851968, 3, 1966087, 851968, 3, 1900551, 851968, 3, 1835015, 851968, 3, 1769479, 851968, 3, 1769478, 851968, 3, 1835014, 851968, 3, 1900550, 851968, 3, 1966086, 851968, 3, 2031622, 851968, 3, 2097158, 851968, 3, 2162694, 851968, 3, 2228229, 851968, 3, 2228228, 851968, 3, 2162692, 851968, 3, 2097156, 851968, 3, 2031620, 851968, 3, 1966084, 851968, 3, 1900548, 851968, 3, 1835012, 851968, 3, 1769476, 851968, 3, 1769477, 851968, 3, 1638404, 851968, 3, 1703940, 851968, 3, 1966085, 851968, 3, 1900549, 851968, 3, 1835013, 851968, 3, 2031621, 851968, 3, 2097157, 851968, 3, 2162693, 851968, 3, 1507329, 851968, 3, 1507328, 851968, 3, 1572864, 851968, 3, 1638400, 851968, 3, 1703936, 851968, 3, 1769472, 851968, 3, 1835008, 851968, 3, 1835009, 851968, 3, 1769473, 851968, 3, 1703937, 851968, 3, 1638401, 851968, 3, 1572865, 851968, 3, 1572861, 851968, 3, 1638397, 851968, 3, 1703933, 851968, 3, 1703934, 851968, 3, 1638398, 851968, 3, 1572863, 851968, 3, 1572862, 851968, 3, 1638399, 851968, 3, 1703935, 851968, 3, 1769471, 851968, 3, 1900544, 851968, 3, 1966080, 851968, 3, 2031616, 851968, 3, 2097151, 851968, 3, 2031615, 851968, 3, 1966079, 851968, 3, 1900542, 851968, 3, 1835006, 851968, 3, 1769470, 851968, 3, 1769469, 851968, 3, 1835005, 851968, 3, 1900541, 851968, 3, 1966077, 851968, 3, 2031613, 851968, 3, 2097149, 851968, 3, 2162685, 851968, 3, 2228221, 851968, 3, 2293757, 851968, 3, 2359293, 851968, 3, 2293758, 851968, 3, 2228222, 851968, 3, 2162686, 851968, 3, 1835007, 851968, 3, 1966078, 851968, 3, 2031614, 851968, 3, 2097150, 851968, 3, 1900543, 851968, 3, 1900545, 851968, 3, 1966081, 851968, 3, 2031617, 851968, 3, 2097153, 851968, 3, 2162689, 851968, 3, 2228225, 851968, 3, 2228224, 851968, 3, 2293760, 851968, 3, 2359295, 851968, 3, 2293759, 851968, 3, 2359294, 851968, 3, 2228223, 851968, 3, 2162687, 851968, 3, 2097152, 851968, 3, 2162688, 851968, 3, 2293761, 851968, 3, 1572859, 851968, 3, 1572858, 851968, 3, 1572857, 851968, 3, 1572856, 851968, 3, 1638392, 851968, 3, 1703928, 851968, 3, 1769464, 851968, 3, 1835000, 851968, 3, 1900536, 851968, 3, 1966072, 851968, 3, 2031608, 851968, 3, 2097144, 851968, 3, 2162680, 851968, 3, 2228216, 851968, 3, 2293752, 851968, 3, 2359288, 851968, 3, 2359289, 851968, 3, 2359290, 851968, 3, 2293754, 851968, 3, 2293755, 851968, 3, 2359291, 851968, 3, 2228219, 851968, 3, 2162683, 851968, 3, 2097147, 851968, 3, 2031611, 851968, 3, 1966075, 851968, 3, 1900539, 851968, 3, 1835003, 851968, 3, 1769467, 851968, 3, 1703931, 851968, 3, 1638395, 851968, 3, 1638394, 851968, 3, 1638393, 851968, 3, 1703929, 851968, 3, 1769465, 851968, 3, 1835001, 851968, 3, 1900537, 851968, 3, 1900538, 851968, 3, 1966074, 851968, 3, 2031610, 851968, 3, 2097146, 851968, 3, 2162682, 851968, 3, 1835002, 851968, 3, 1769466, 851968, 3, 1703930, 851968, 3, 2031609, 851968, 3, 2097145, 851968, 3, 2162681, 851968, 3, 1966073, 851968, 3, 2228217, 851968, 3, 2293753, 851968, 3, 2228218, 851968, 3, 1441799, 851968, 2, 1441798, 851968, 2, 1441797, 851968, 2, 1441796, 851968, 2, 1441795, 851968, 2, 1441793, 851968, 2, 1441792, 851968, 2, 1507327, 851968, 2, 1507326, 851968, 2, 1507325, 851968, 2, 1507323, 851968, 2, 1507322, 851968, 2, 1507321, 851968, 2, 1507320, 851968, 2, 1376240, 655360, 2, 1376239, 589824, 2, 1376238, 589824, 2, 1376237, 589824, 2, 1376236, 589824, 2, 1376235, 589824, 2, 1376234, 524288, 2, 1376229, 131072, 4, 851939, 131072, 4, 851938, 131072, 4, 1376230, 131072, 4, 851940, 131072, 4, 1441766, 131072, 6, 1507302, 131072, 6, 1572838, 131072, 6, 1638374, 131072, 6, 1703910, 131072, 6, 1769446, 131072, 6, 1834982, 131072, 6, 1900518, 131072, 6, 1966054, 131072, 6, 2031590, 131072, 6, 2097126, 131072, 6, 2162662, 131072, 6, 1441765, 131072, 6, 1507301, 131072, 6, 1572837, 131072, 6, 1638373, 131072, 6, 1703909, 131072, 6, 1769445, 131072, 6, 1834981, 131072, 6, 2031589, 131072, 6, 2097125, 131072, 6, 2162661, 131072, 6, 1966053, 131072, 6, 1900517, 131072, 6, 2228197, 131072, 6, 2293733, 131072, 6, 2359269, 131072, 6, 2228198, 131072, 6, 2293734, 131072, 6, 2359270, 131072, 6, 917476, 131072, 6, 983012, 131072, 6, 1048547, 131072, 6, 1114083, 131072, 6, 1179619, 131072, 6, 1245155, 131072, 6, 1310691, 131072, 6, 1245156, 131072, 6, 1179620, 131072, 6, 1114084, 131072, 6, 1048548, 131072, 6, 1310692, 131072, 6, 1376228, 131072, 6, 1441764, 131072, 6, 1507300, 131072, 6, 1572836, 131072, 6, 1638372, 131072, 6, 1703908, 131072, 6, 1769444, 131072, 6, 1834980, 131072, 6, 1900516, 131072, 6, 1966052, 131072, 6, 2031588, 131072, 6, 2031587, 131072, 6, 1966051, 131072, 6, 1900515, 131072, 6, 1834979, 131072, 6, 1769443, 131072, 6, 1703907, 131072, 6, 1638371, 131072, 6, 1572835, 131072, 6, 1507299, 131072, 6, 1441763, 131072, 6, 983011, 131072, 6, 917475, 131072, 6, 917474, 131072, 6, 983010, 131072, 6, 1048546, 131072, 6, 1114082, 131072, 6, 1179618, 131072, 6, 1245154, 131072, 6, 1310690, 131072, 6, 1376226, 131072, 6, 1441762, 131072, 6, 1507298, 131072, 6, 1572834, 131072, 6, 1638370, 131072, 6, 1703906, 131072, 6, 1769442, 131072, 6, 1834978, 131072, 6, 1376227, 131072, 6, 1900514, 131072, 6, 1966050, 131072, 6, 2031586, 131072, 6, 2097122, 131072, 6, 2162658, 131072, 6, 2162659, 131072, 6, 2228195, 131072, 6, 2293731, 131072, 6, 2359267, 131072, 6, 2359268, 131072, 6, 2293732, 131072, 6, 2228196, 131072, 6, 2162660, 131072, 6, 2097124, 131072, 6, 2097123, 131072, 6, 2293730, 131072, 6, 2228194, 131072, 6, 2359266, 131072, 6, 917481, 131072, 6, 917482, 131072, 6, 917483, 131072, 6, 917484, 131072, 6, 917485, 131072, 6, 917486, 131072, 6, 983022, 131072, 6, 983021, 131072, 6, 983020, 131072, 6, 983019, 131072, 6, 983018, 131072, 6, 983017, 131072, 6, 524271, 131072, 6, 524272, 131072, 6, 524273, 131072, 6, 524274, 131072, 6, 589810, 131072, 6, 589809, 131072, 6, 589808, 131072, 6, 589807, 131072, 6, 655356, 131072, 6, 655357, 131072, 6, 655358, 131072, 6, 655359, 131072, 6, 589824, 131072, 6, 589825, 131072, 6, 589826, 131072, 6, 589827, 131072, 6, 589828, 131072, 6, 589829, 131072, 6, 589830, 131072, 6, 589831, 131072, 6, 589832, 131072, 6, 589833, 131072, 6, 589834, 131072, 6, 1572851, 851968, 2, 1572850, 851968, 2, 1572849, 851968, 2, 1572848, 851968, 2, 1572847, 851968, 2, 1572846, 851968, 2, 1572845, 851968, 2, 1572844, 851968, 2, 1572843, 851968, 2, 1572842, 851968, 2, 1572841, 851968, 2, 1572840, 851968, 2, 1572839, 851968, 2, 1638387, 851968, 3, 1638386, 851968, 3, 1638385, 851968, 3, 1638384, 851968, 3, 1638383, 851968, 3, 1638382, 851968, 3, 1638381, 851968, 3, 1638380, 851968, 3, 1638379, 851968, 3, 1638378, 851968, 3, 1638377, 851968, 3, 1638376, 851968, 3, 1638375, 851968, 3, 1703911, 851968, 3, 1769447, 851968, 3, 1834983, 851968, 3, 1900519, 851968, 3, 1966055, 851968, 3, 2031591, 851968, 3, 2097127, 851968, 3, 2162663, 851968, 3, 2228199, 851968, 3, 2293735, 851968, 3, 2359271, 851968, 3, 2359272, 851968, 3, 2359273, 851968, 3, 2359274, 851968, 3, 2359275, 851968, 3, 2359276, 851968, 3, 2359277, 851968, 3, 2359278, 851968, 3, 2359279, 851968, 3, 2359280, 851968, 3, 2359281, 851968, 3, 2359282, 851968, 3, 2359283, 851968, 3, 2293747, 851968, 3, 2228211, 851968, 3, 2162675, 851968, 3, 2097139, 851968, 3, 2031603, 851968, 3, 1966067, 851968, 3, 1900531, 851968, 3, 1834995, 851968, 3, 1769459, 851968, 3, 1703923, 851968, 3, 1703922, 851968, 3, 1703921, 851968, 3, 1703918, 851968, 3, 1703917, 851968, 3, 1703916, 851968, 3, 1703915, 851968, 3, 1703914, 851968, 3, 1703913, 851968, 3, 1703912, 851968, 3, 1769448, 851968, 3, 1769449, 851968, 3, 1834985, 851968, 3, 1900522, 851968, 3, 1966058, 851968, 3, 2031594, 851968, 3, 2097131, 851968, 3, 2162667, 851968, 3, 2031595, 851968, 3, 1966060, 851968, 3, 1900524, 851968, 3, 1834989, 851968, 3, 1834990, 851968, 3, 1769454, 851968, 3, 1769455, 851968, 3, 1834991, 851968, 3, 1900528, 851968, 3, 1966064, 851968, 3, 2031600, 851968, 3, 2097136, 851968, 3, 2162672, 851968, 3, 2162671, 851968, 3, 2097134, 851968, 3, 2031597, 851968, 3, 1966061, 851968, 3, 1900525, 851968, 3, 1769453, 851968, 3, 1703919, 851968, 3, 1703920, 851968, 3, 1769458, 851968, 3, 1834994, 851968, 3, 1834993, 851968, 3, 1900529, 851968, 3, 2031599, 851968, 3, 2031598, 851968, 3, 2097135, 851968, 3, 2162670, 851968, 3, 2162669, 851968, 3, 2228204, 851968, 3, 2228203, 851968, 3, 2228202, 851968, 3, 2162666, 851968, 3, 2097130, 851968, 3, 1769451, 851968, 3, 1769452, 851968, 3, 1834988, 851968, 3, 1900523, 851968, 3, 1834987, 851968, 3, 1834986, 851968, 3, 1769450, 851968, 3, 1900521, 851968, 3, 1966057, 851968, 3, 1966056, 851968, 3, 1900520, 851968, 3, 1834984, 851968, 3, 2031592, 851968, 3, 2097128, 851968, 3, 2162664, 851968, 3, 2228200, 851968, 3, 2293736, 851968, 3, 2228201, 851968, 3, 2162665, 851968, 3, 2097129, 851968, 3, 2293737, 851968, 3, 2031593, 851968, 3, 1966059, 851968, 3, 2097133, 851968, 3, 2228205, 851968, 3, 2293740, 851968, 3, 1966063, 851968, 3, 1834992, 851968, 3, 1769456, 851968, 3, 1900527, 851968, 3, 1966062, 851968, 3, 1900526, 851968, 3, 2097132, 851968, 3, 1769457, 851968, 3, 2162668, 851968, 3, 2031596, 851968, 3, 2228206, 851968, 3, 2228207, 851968, 3, 2228208, 851968, 3, 2162673, 851968, 3, 1900530, 851968, 3, 1966066, 851968, 3, 2031602, 851968, 3, 2031601, 851968, 3, 2097137, 851968, 3, 2228209, 851968, 3, 2293745, 851968, 3, 2228210, 851968, 3, 2162674, 851968, 3, 2097138, 851968, 3, 1966065, 851968, 3, 2293746, 851968, 3, 2293744, 851968, 3, 2293743, 851968, 3, 2293742, 851968, 3, 2293741, 851968, 3, 2293738, 851968, 3, 2293739, 851968, 3, 458748, 458752, 2, 393212, 458752, 2, 327676, 458752, 2, 262140, 458752, 2, 196604, 458752, 2, 131068, 458752, 2, 65532, 458752, 2, 65533, 458752, 2, 131069, 458752, 2, 196605, 458752, 2, 262141, 458752, 2, 327677, 458752, 2, 393213, 458752, 2, 458749, 458752, 2, -3, 458752, 2, -4, 458752, 2, 524305, 917504, 0, 393230, 917504, 0, 196619, 917504, 0, 524311, 917504, 0, 393242, 917504, 0, 196637, 917504, 0, 65562, 917504, 0, 65550, 917504, 0, -65519, 917504, 0, -65513, 917504, 0, -196588, 917504, 0)

[node name="NiceNPC" parent="." instance=ExtResource("7_0bb30")]

[node name="Chest" parent="." instance=ExtResource("8_frwj4")]
position = Vector2(64, 37)

[node name="Diamond3" parent="." instance=ExtResource("9_lch6e")]
position = Vector2(-356, 176)

[node name="Diamond2" parent="." instance=ExtResource("9_lch6e")]
position = Vector2(404, 130)

[node name="Diamond" parent="." instance=ExtResource("9_lch6e")]
position = Vector2(-139, 291)

[node name="Key" parent="." instance=ExtResource("10_pn16j")]
position = Vector2(-256, 307)

[node name="sfx" type="Node2D" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("11_174wk")
autoplay = true

[node name="LowerWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWall"]
position = Vector2(417, 533.5)
shape = SubResource("RectangleShape2D_s57uq")

[node name="LowerWall2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWall2"]
position = Vector2(-588, 522)
shape = SubResource("RectangleShape2D_758jn")

[node name="RightWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(643, 150.5)
shape = SubResource("RectangleShape2D_m8rsf")

[node name="UpperWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWall"]
position = Vector2(-48.5, -175)
shape = SubResource("RectangleShape2D_bxt6c")

[node name="LeftWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-664, 154)
shape = SubResource("RectangleShape2D_1rka5")

[node name="Water" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
shape = SubResource("SegmentShape2D_c8ksd")

[node name="Water2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water2"]
shape = SubResource("SegmentShape2D_2dsn4")

[node name="ladder" parent="." instance=ExtResource("14_es47r")]
position = Vector2(-423, 309)

[node name="ladder2" parent="." instance=ExtResource("14_es47r")]
position = Vector2(-279, 184)

[node name="Door" parent="." instance=ExtResource("15_5wteh")]
position = Vector2(-241, 87)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-9, 94)
script = ExtResource("3_7nnq2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_w5kr0")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_b1rbs")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="FootSteps" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(9, -94)
stream = ExtResource("6_pqt8o")
volume_db = 24.0
pitch_scale = 2.09

[node name="Score" type="Label" parent="Player"]
offset_left = -12.0
offset_top = -26.0
offset_right = 11.0
offset_bottom = -17.0
text = "score: 0"
label_settings = SubResource("LabelSettings_ee0jc")

[node name="Jump" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("8_et3ac")
volume_db = 20.0

[connection signal="body_entered" from="LowerWall" to="Player" method="_on_lower_wall_body_entered"]
[connection signal="body_entered" from="LowerWall2" to="Player" method="_on_lower_wall_2_body_entered"]
[connection signal="body_entered" from="RightWall" to="Player" method="_on_right_wall_body_entered"]
[connection signal="body_entered" from="UpperWall" to="Player" method="_on_upper_wall_body_entered"]
[connection signal="body_entered" from="LeftWall" to="Player" method="_on_left_wall_body_entered"]
[connection signal="body_entered" from="Water" to="Player" method="_on_water_body_entered"]
[connection signal="body_entered" from="Water2" to="Player" method="_on_water_2_body_entered"]
